Fix text alignment

--- a/project/source/page/css/style.css
+++ b/project/source/page/css/style.css
@@ -128,6 +128,10 @@ form label {
   overflow-wrap: anywhere;
 }
 
+.restaurant-widget {
+  text-align: left;
+}
+
 @media screen and (max-width: 1200px) {
 .restaurant-widget {
   padding: 1vh 10vw;
